src/objects/ITOP_Request_Secondary_Option__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Time__c</fullName>
        <label>Estimated Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_Source__c</fullName>
        <label>Image Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Descriptor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Descriptor</label>
        <referenceTo>ITOP_Request_Primary_Option__c</referenceTo>
        <relationshipLabel>ITOP Request Secondary Options</relationshipLabel>
        <relationshipName>ITOP_Request_Secondary_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>&apos;Which manufacturer does your device fall under?&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <label>ITOP Request Secondary Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ITOP Request Secondary Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITOP Request Secondary Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>